--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -72,4 +72,17 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="times">
+        <item>一个月</item>
+        <item>两个月</item>
+        <item>三个月</item>
+        <item>四个月</item>
+        <item>五个月</item>
+        <item>一个月</item>
+        <item>一个月</item>
+        <item>一个月</item>
+        <item>一个月</item>
+        <item>一个月</item>
+        <item>一个月</item>
+    </string-array>
 </resources>
