--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">DidiIncubator</string>
+    <string name="about_text">\t\t\t滴滴孵化器是为创业者提供办公室租凭及配套服务的O2O平台。滴滴孵化器的价值观是简单，极致，快速，激情。我们通过pc端+移动端两大产品，链接业主，客户，以提升企业用户办公租凭体验和找房效率为原则，创造更好的创业办公租凭体验。</string>
     <string name="drawer_open">open</string>
     <string name="drawer_close">close</string>
     <string name="incubator">无界空间</string>
