--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="drawer_close">close</string>
     <string name="incubator">无界空间</string>
     <string name="applyer">申请人姓名      :</string>
-    <string name="appler_hint">请输入真实姓名</string>
+    <string name="appler_hint">请输入真实姓名(必填)</string>
     <string name="pull_to_refresh_pull_label" translatable="false">向下拉动可以刷新</string>
     <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
     <string name="pull_to_refresh_refreshing_label" translatable="false">加载中…</string>
@@ -68,7 +68,7 @@
     <string name="umeng_socialize_content_hint">说点啥…</string>
     <string name="umeng_socialize_cancel_btn_str">取消</string>
     <string name="umeng_socialize_send_btn_str">发送</string>
-    <string name="umeng_socialize_img_des" />
+    <string name="umeng_socialize_img_des"/>
     <string name="umeng_socialize_share">分享</string>
 
     <!-- TODO: Remove or change this placeholder text -->
